# bead

./: LICENSE  README  cli.py  component.py  config.py  exceptions.py  pyproject.toml
bead.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
compiler/: parser.py  renderer.py
server/: dev_server.py  middleware.py  router.py
state/: state.py
styles/: compiler.py
ui/: __init__.py  core_components.py
utils/: validation.py
